feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -57,21 +57,22 @@ import template from "./diagrams/template.svg";
 
 ---
 
-# How to perceive this presentation
-
-<p style="font-size: 50px; text-align:left; padding-bottom:200px;">
+<p style="font-size: 70px; text-align:left; padding-bottom:100px;">
+ <span style="font-size: 120px;">How to perceive this presentation</span>
+ <br/>
+ <br/>
+ <ul>
+    <li><i>Speaker notes</i> mode:</li>
     <ul>
-        <li><i>Speaker notes</i> mode</li>
-        <ul>
-            <li><i>Alt+P</i> - on Windows</li>
-            <li><i>Option+P</i> - on Mac</li>
-        </ul>
-        <li><i>Speaker notes</i> mode</li>
-        <ul>
-            <li><i>F11</i> - fullscreen mode enabling</li>
-            <li><i>Ctrl + '-/+'</i> - font size tuning</li>
-        </ul>
+        <li><i>Alt+P</i> - on Windows</li>
+        <li><i>Option+P</i> - on Mac</li>
     </ul>
+    <li>Size tuning:</li>
+    <ul>
+        <li><i>F11</i> - fullscreen mode enabling</li>
+        <li><i>Ctrl + '-/+'</i> - decrease/increase font size</li>
+    </ul>
+</ul>
 </p>
 
 <Notes>
@@ -82,6 +83,8 @@ import template from "./diagrams/template.svg";
 сопровождающий его текст.
 
 Режим докладчика включается комбинацией клавиш *Alt+P* - на Windows и *Option+P* - на Mac.
+
+Комбинацией клавиш *Ctrl + -/+* можно уменьшать/увеличивать размер шрифта
 
 </Notes>
 
@@ -238,7 +241,6 @@ Substitution Principle*, для применения которого необх
 
 </Notes>
 
-
 ---
 
 <p style="font-size: 130px; text-align:center; padding-bottom:140px;">
@@ -246,6 +248,12 @@ Clean Architecture
 <br/> 
 and frontend
 </p>
+
+<Notes>
+
+Вставка отсюда: [Clean Architecture on Frontend presentation](https://github.com/softspiders/ca-on-frontend)
+
+</Notes>
 
 ---
 
