feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -259,7 +259,19 @@ and frontend
 
 # Terminology
 
+<Notes>
+
+В этой презентации и в коде стартера используются именования, вполне традиционные для Чистой Архитектуры, но для тех,
+кто только начинает знакомиться с этой областью, некоторые понятия нуждаются в пояснениях.
+
+Не вдаваясь в детали, приведём краткий словарь используемых понятий.
+
+</Notes>
+
 ---
+
+# Словарь
+
 - Domain
   - Entities (enterprise)
   - Use Cases (business logic, services)
