feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -264,7 +264,7 @@ and frontend
 В этой презентации и в коде стартера используются именования, вполне традиционные для Чистой Архитектуры, но для тех,
 кто только начинает знакомиться с этой областью, некоторые понятия нуждаются в пояснениях.
 
-Не вдаваясь в детали, приведём краткий словарь используемых понятий.
+Не вдаваясь в детали, приведём краткий словарь используемых понятий с соответствующими комментариями.
 
 </Notes>
 
@@ -272,7 +272,7 @@ and frontend
 
 # Словарь
 
-- Domain
+- *Domain*
   - Entities (enterprise)
   - Use Cases (business logic, services)
 - Adapters 
@@ -282,10 +282,18 @@ and frontend
 - Backend frameworks
 - DB
 
+
 <Notes>
 
-The most typical scheme...
-Layers of reusability...
+- *Domain* в контексте Чистой Архитектуры означает то же, что *бизнес логика*. Как правило, подразделяется на два слоя:
+внутренний - *Entities* и внешний - *Use Cases*.
+- *Entities* - иногда понимается буквально, как сущность некоторой предметной области, иногда в некоторых контекстах -
+как слой *бизнес-логики*, разделяемый несколькими программными системами - приложениями, сервисами, ... 
+- *Use Case* - логически замкнутый, самодостаточный сценарий использования некоторой функциональности (feature) системы.
+В некоторых контекстах *Use Cases* можно понимать, как слой *бизнес-логики*, относящийся к конкретной системе.
+*Use Case* является одним из ключевых понятий Чистой Архитектуры, поскольку на нём базируется *SRP* - *Принцип Единой
+Ответственности* - один из самых главных принципов *SOLID*.
+- *Adapters* - адаптеры ...
 
 </Notes>
 
