--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -285,14 +285,15 @@ and frontend
 
 <Notes>
 
-- *Domain* в контексте Чистой Архитектуры означает то же, что *бизнес логика*. Как правило, подразделяется на два слоя:
-внутренний - *Entities* и внешний - *Use Cases*.
+- *Domain* в контексте Чистой Архитектуры означает то же самое, что *бизнес логика*. Как правило, подразделяется на два
+слоя: внутренний - *Entities* и внешний - *Use Cases*.
 - *Entities* - иногда понимается буквально, как сущность некоторой предметной области, иногда в некоторых контекстах -
-как слой *бизнес-логики*, разделяемый несколькими программными системами - приложениями, сервисами, ... 
-- *Use Case* - логически замкнутый, самодостаточный сценарий использования некоторой функциональности (feature) системы.
-В некоторых контекстах *Use Cases* можно понимать, как слой *бизнес-логики*, относящийся к конкретной системе.
-*Use Case* является одним из ключевых понятий Чистой Архитектуры, поскольку на нём базируется *SRP* - *Принцип Единой
-Ответственности* - один из самых главных принципов *SOLID*.
+как слой *бизнес-логики*, разделяемый несколькими программными продуктами - системами, приложениями, сервисами, ... 
+- *Use Cases* - логически замкнутые, **самодостаточные** сценарии использования функциональностей (feature) системы.
+В некоторых контекстах совокупность *Use Cases* понимются, как слой *бизнес-логики*, относящийся к конкретному
+программному продукту.
+*Use Case* - одно из ключевых понятий Чистой Архитектуры, поскольку на нём базируется *SRP* - *Принцип Единой
+Ответственности*, который, несмотря на своё неудачное название, является одним из самых главных принципов.
 - *Adapters* - адаптеры ...
 
 </Notes>
