feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -287,14 +287,17 @@ and frontend
 
 - *Domain* в контексте Чистой Архитектуры означает то же самое, что *бизнес логика*. Как правило, подразделяется на два
 слоя: внутренний - *Entities* и внешний - *Use Cases*.
-- *Entities* - иногда понимается буквально, как сущность некоторой предметной области, иногда в некоторых контекстах -
+- *Entities* - иногда понимаются буквально, как сущности некоторой предметной области, иногда в некоторых контекстах -
 как слой *бизнес-логики*, разделяемый несколькими программными продуктами - системами, приложениями, сервисами, ... 
 - *Use Cases* - логически замкнутые, **самодостаточные** сценарии использования функциональностей (feature) системы.
-В некоторых контекстах совокупность *Use Cases* понимются, как слой *бизнес-логики*, относящийся к конкретному
-программному продукту.
+В некоторых контекстах совокупность *Use Cases* понимается, как слой *бизнес-логики*, относящийся к конкретному
+программному продукту - в противовес *Entities* - слою бизнес-логики, как уже было сказано, разделяемому множеством
+продуктов.
 *Use Case* - одно из ключевых понятий Чистой Архитектуры, поскольку на нём базируется *SRP* - *Принцип Единой
-Ответственности*, который, несмотря на своё неудачное название, является одним из самых главных принципов.
-- *Adapters* - адаптеры ...
+Ответственности*, который, несмотря на своё неудачное название (на чём здесь не будем останавливаться), является одним
+из самых главных принципов *SOLID* и, соответственно, Чистой Архитектуры.
+- *Adapters* - адаптеры - программный модули, согласующие интерфейсы внутренних и внешних слоёв. Чаше всего имеется в
+виду согласование интерфейсов фреймворков и внешних систем с интерфейсами *бизнес-логики*
 
 </Notes>
 
