feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -264,29 +264,39 @@ and frontend
 В этой презентации и в коде стартера используются именования, вполне традиционные для Чистой Архитектуры, но для тех,
 кто только начинает знакомиться с этой областью, некоторые понятия нуждаются в пояснениях.
 
+</Notes>
+
+---
+
+# Понятийный словарь
+
+<Notes>
+
 Не вдаваясь в детали, приведём краткий словарь используемых понятий с соответствующими комментариями.
 
 </Notes>
 
 ---
 
-# Словарь
-
 - *Domain*
-  - Entities (enterprise)
-  - Use Cases (business logic, services)
-- Adapters 
-  - gateways (repositories)
-  - presenters
-- UI (frameworks)
-- Backend frameworks
-- DB
-
 
 <Notes>
 
 - *Domain* в контексте Чистой Архитектуры означает то же самое, что *бизнес логика*. Как правило, подразделяется на два
 слоя: внутренний - *Entities* и внешний - *Use Cases*.
+
+...
+</Notes>
+
+---
+
+- *Domain*
+  - *Entities*
+  - *Use Cases*
+
+<Notes>
+...
+
 - *Entities* - иногда понимаются буквально, как сущности некоторой предметной области, иногда в некоторых контекстах -
 как слой *бизнес-логики*, разделяемый несколькими программными продуктами - системами, приложениями, сервисами, ... 
 - *Use Cases* - логически замкнутые, **самодостаточные** сценарии использования функциональностей (feature) системы.
@@ -296,9 +306,30 @@ and frontend
 *Use Case* - одно из ключевых понятий Чистой Архитектуры, поскольку на нём базируется *SRP* - *Принцип Единой
 Ответственности*, который, несмотря на своё неудачное название (на чём здесь не будем останавливаться), является одним
 из самых главных принципов *SOLID* и, соответственно, Чистой Архитектуры.
-- *Adapters* - адаптеры - программный модули, согласующие интерфейсы внутренних и внешних слоёв. Чаше всего имеется в
+
+...
+</Notes>
+
+---
+
+- *Domain*
+  - *Entities*
+  - *Use Cases*
+- Adapters 
+  - gateways (repositories)
+  - presenters
+- UI (frameworks)
+- Backend frameworks
+- DB
+
+
+<Notes>
+...
+
+- *Adapters* - адаптеры - программные модули, согласующие интерфейсы внутренних и внешних слоёв. Чаше всего имеется в
 виду согласование интерфейсов фреймворков и внешних систем с интерфейсами *бизнес-логики*
 
+...
 </Notes>
 
 ---
