--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -282,7 +282,8 @@ and frontend
 
 <Notes>
 
-- *Domain* в контексте Чистой Архитектуры означает то же самое, что *бизнес логика*. Как правило, подразделяется на два
+Domain - Модель предметной области. Является самой стабильной, сущностной составляющей любого программного продукта. 
+В контексте Чистой Архитектуры *Domain* означает то же самое, что *бизнес логика*. Как правило, подразделяется на два
 слоя: внутренний - *Entities* и внешний - *Use Cases*.
 
 ...
@@ -299,10 +300,11 @@ and frontend
 
 - *Entities* - иногда понимаются буквально, как сущности некоторой предметной области, иногда в некоторых контекстах -
 как слой *бизнес-логики*, разделяемый несколькими программными продуктами - системами, приложениями, сервисами, ... 
-- *Use Cases* - логически замкнутые, **самодостаточные** сценарии использования функциональностей (feature) системы.
+- *Use Cases* - логически замкнутые, **самодостаточные** сценарии использования функциональностей (features) системы.
 В некоторых контекстах совокупность *Use Cases* понимается, как слой *бизнес-логики*, относящийся к конкретному
 программному продукту - в противовес *Entities* - слою бизнес-логики, как уже было сказано, разделяемому множеством
 продуктов.
+
 *Use Case* - одно из ключевых понятий Чистой Архитектуры, поскольку на нём базируется *SRP* - *Принцип Единой
 Ответственности*, который, несмотря на своё неудачное название (на чём здесь не будем останавливаться), является одним
 из самых главных принципов *SOLID* и, соответственно, Чистой Архитектуры.
