feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -331,6 +331,10 @@ Domain - Модель предметной области. Является са
 - *Adapters* - адаптеры - программные модули, согласующие интерфейсы внутренних и внешних слоёв. Чаше всего имеется в
 виду согласование интерфейсов фреймворков и внешних систем с интерфейсами *бизнес-логики*
 
+- Gateway - часто используется в качестве синонима Repository, но может иметь (и часто имеет) более широкий смысл - фасад, представляющий некий сервис, не обязательно связанный с хранением данных
+Controller - по сути - адаптер UI-фреймворка для Интерактора, отвечающий за реакцию на действия пользователя
+- Presenter - по сути - адаптер UI-фреймворка для Интерактора, отвечающий за функции отображения бизнес-объектов. Иногда берёт на себя роль Контроллера, совмещая ответственность вывода и реакции на действия пользователя.
+
 ...
 </Notes>
 
