feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -328,12 +328,15 @@ Domain - Модель предметной области. Является са
 <Notes>
 ...
 
-- *Adapters* - адаптеры - программные модули, согласующие интерфейсы внутренних и внешних слоёв. Чаше всего имеется в
-виду согласование интерфейсов фреймворков и внешних систем с интерфейсами *бизнес-логики*
+- *Adapter* - адаптер - программный модуль, согласующий интерфейсы двух других модулей. В контексте Чистой Архитектуры 
+адаптеры часто служат для согласования интерфейсов внутреннего и внешнего архитектурных слоёв. При этом наиболее типовым
+случаем является согласование интерфейсов фреймворков и внешних систем с интерфейсами *бизнес-логики*.
+В коде предлагаемого стартера используются *адаптеры* двух видов:  *презентеры* и *шлюзы*(*presenters* и *gateways*).
 
-- Gateway - часто используется в качестве синонима Repository, но может иметь (и часто имеет) более широкий смысл - фасад, представляющий некий сервис, не обязательно связанный с хранением данных
-Controller - по сути - адаптер UI-фреймворка для Интерактора, отвечающий за реакцию на действия пользователя
-- Presenter - по сути - адаптер UI-фреймворка для Интерактора, отвечающий за функции отображения бизнес-объектов. Иногда берёт на себя роль Контроллера, совмещая ответственность вывода и реакции на действия пользователя.
+- Presenter - по сути - адаптер пользовательского интерфейса для модулей бизнес-логики.
+
+- *Gateway* - адаптер некоторого сервиса, используемого бизнес-логикой. В частности, сервис может выполнять функции
+хранения состояния сущностей (persistence). Иногда в таких случаях вместо *Gateway* используется термин *Repository*.
 
 ...
 </Notes>
