feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -257,22 +257,14 @@ and frontend
 
 ---
 
-# Terminology
+# Glossary of Terms Used
 
 <Notes>
 
-В этой презентации и в коде стартера используются именования, вполне традиционные для Чистой Архитектуры, но для тех,
-кто только начинает знакомиться с этой областью, некоторые понятия нуждаются в пояснениях.
+В этой презентации и в коде самого стартера используются именования, вполне традиционные для Чистой Архитектуры, но для
+тех, кто только начинает знакомиться с этой областью, некоторые понятия нуждаются в пояснениях.
 
-</Notes>
-
----
-
-# Понятийный словарь
-
-<Notes>
-
-Не вдаваясь в детали, приведём краткий словарь используемых понятий с соответствующими комментариями.
+Не погружаясь глубоко в детали, приведём краткий словарь используемых понятий с соответствующими комментариями.
 
 </Notes>
 
@@ -282,7 +274,7 @@ and frontend
 
 <Notes>
 
-Domain - Модель предметной области. Является самой стабильной, сущностной составляющей любого программного продукта. 
+*Domain* - Модель предметной области. Является самой стабильной, сущностной составляющей любого программного продукта. 
 В контексте Чистой Архитектуры *Domain* означает то же самое, что *бизнес логика*. Как правило, подразделяется на два
 слоя: внутренний - *Entities* и внешний - *Use Cases*.
 
@@ -298,16 +290,16 @@ Domain - Модель предметной области. Является са
 <Notes>
 ...
 
-- *Entities* - иногда понимаются буквально, как сущности некоторой предметной области, иногда в некоторых контекстах -
-как слой *бизнес-логики*, разделяемый несколькими программными продуктами - системами, приложениями, сервисами, ... 
-- *Use Cases* - логически замкнутые, **самодостаточные** сценарии использования функциональностей (features) системы.
-В некоторых контекстах совокупность *Use Cases* понимается, как слой *бизнес-логики*, относящийся к конкретному
-программному продукту - в противовес *Entities* - слою бизнес-логики, как уже было сказано, разделяемому множеством
+- *Entities* - иногда понимаются буквально, как сущности некоторой предметной области, иногда - как слой *бизнес-логики*,
+разделяемый несколькими программными продуктами - системами, приложениями, сервисами. 
+- *Use Cases* - логически замкнутые, **самодостаточные** сценарии использования функций (features) системы.
+Иногда *Use Cases* в своей совокупности понимаются, как слой *бизнес-логики*, относящийся к конкретному программному
+продукту - в противовес *Entities* - слою бизнес-логики, который, как уже было сказано, разделяемому множеством
 продуктов.
 
-*Use Case* - одно из ключевых понятий Чистой Архитектуры, поскольку на нём базируется *SRP* - *Принцип Единой
-Ответственности*, который, несмотря на своё неудачное название (на чём здесь не будем останавливаться), является одним
-из самых главных принципов *SOLID* и, соответственно, Чистой Архитектуры.
+*Use Case* - одно из ключевых понятий архитектуры системы, в частности, с ним тесно связан *Принцип Единой
+Ответственности* (*SRP*), который, в свою очередь, является одним из самых главных принципов *SOLID* и, соответственно,
+Чистой Архитектуры.
 
 ...
 </Notes>
@@ -320,26 +312,45 @@ Domain - Модель предметной области. Является са
 - Adapters 
   - gateways (repositories)
   - presenters
-- UI (frameworks)
-- Backend frameworks
-- DB
-
+...
 
 <Notes>
 ...
 
-- *Adapter* - адаптер - программный модуль, согласующий интерфейсы двух других модулей. В контексте Чистой Архитектуры 
-адаптеры часто служат для согласования интерфейсов внутреннего и внешнего архитектурных слоёв. При этом наиболее типовым
-случаем является согласование интерфейсов фреймворков и внешних систем с интерфейсами *бизнес-логики*.
+- *Adapters* Адаптер - вспомогательный программный модуль, согласующий интерфейсы двух других модулей. В контексте
+*Чистой Архитектуры* адаптеры часто служат для согласования интерфейсов внутреннего и внешнего архитектурных слоёв.
+При этом наиболее типовым случаем является согласование интерфейсов фреймворков и внешних систем с интерфейсами
+*бизнес-логики*.
 В коде предлагаемого стартера используются *адаптеры* двух видов:  *презентеры* и *шлюзы*(*presenters* и *gateways*).
 
-- Presenter - по сути - адаптер пользовательского интерфейса для модулей бизнес-логики.
+- *Presenter* - по сути - адаптер пользовательского интерфейса для модулей бизнес-логики.
 
-- *Gateway* - адаптер некоторого сервиса, используемого бизнес-логикой. В частности, сервис может выполнять функции
-хранения состояния сущностей (persistence). Иногда в таких случаях вместо *Gateway* используется термин *Repository*.
+- *Gateway* - адаптер некоторого сервиса, используемого бизнес-логикой, в наиболее типовых случаях доступного через REST
+API. В частности, сервис может выполнять функции хранения состояния сущностей (persistence), иногда в таких случаях
+вместо *Gateway* используется термин *Repository*.
 
 ...
 </Notes>
+
+---
+...
+
+- *Domain*
+  - *Entities*
+  - *Use Cases*
+- Adapters 
+  - gateways (repositories)
+  - presenters
+- UI & backend frameworks
+- DB drivers
+
+...
+<Notes>
+...
+
+...
+</Notes>
+
 
 ---
 
@@ -573,6 +584,7 @@ and modules
 # Useful materials
 
 [*Dependency Inversion Principle* presentation](https://csb-9kg5y-8d0n41fyp.now.sh)
+[*Заблуждения Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/)
 
 ---
 
