feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -246,7 +246,7 @@ Substitution Principle*, для применения которого необх
 <p style="font-size: 130px; text-align:center; padding-bottom:140px;">
 Clean Architecture
 <br/> 
-and frontend
+on frontend
 </p>
 
 <Notes>
@@ -257,20 +257,21 @@ and frontend
 
 ---
 
-# Glossary of Terms Used
+# Glossary
 
 <Notes>
 
-В этой презентации и в коде самого стартера используются именования, вполне традиционные для Чистой Архитектуры, но для
-тех, кто только начинает знакомиться с этой областью, некоторые понятия нуждаются в пояснениях.
+В этой презентации и в коде самого стартера используются именования, вполне традиционные для *Чистой Архитектуры*, но
+для тех, кто только начинает знакомиться с этой областью, они будут непривычны и нуждаются в пояснениях.
 
-Не погружаясь глубоко в детали, приведём краткий словарь используемых понятий с соответствующими комментариями.
+Поэтому перед тем, как перейти к изложению главного предмета презентации, не погружаясь глубоко в детали, приведём
+краткий словарь используемых терминов с соответствующими комментариями.
 
 </Notes>
 
 ---
 
-- *Domain*
+- ***Domain***
 
 <Notes>
 
@@ -284,8 +285,8 @@ and frontend
 ---
 
 - *Domain*
-  - *Entities*
-  - *Use Cases*
+  - ***Entities***
+  - ***Use Cases***
 
 <Notes>
 ...
@@ -298,8 +299,8 @@ and frontend
 продуктов.
 
 *Use Case* - одно из ключевых понятий архитектуры системы, в частности, с ним тесно связан *Принцип Единой
-Ответственности* (*SRP*), который, в свою очередь, является одним из самых главных принципов *SOLID* и, соответственно,
-Чистой Архитектуры.
+Ответственности* (*SRP*), который, в свою очередь, является одним из ключевых принципов *SOLID* и, соответственно,
+*Чистой Архитектуры*.
 
 ...
 </Notes>
@@ -309,42 +310,40 @@ and frontend
 - *Domain*
   - *Entities*
   - *Use Cases*
-- Adapters 
-  - gateways (repositories)
-  - presenters
-...
+- ***Adapters***
+  - ***Presenters***
+  - ***Gateways***
 
 <Notes>
 ...
 
 - *Adapters* Адаптер - вспомогательный программный модуль, согласующий интерфейсы двух других модулей. В контексте
-*Чистой Архитектуры* адаптеры часто служат для согласования интерфейсов внутреннего и внешнего архитектурных слоёв.
-При этом наиболее типовым случаем является согласование интерфейсов фреймворков и внешних систем с интерфейсами
+*Чистой Архитектуры* адаптеры обычно служат для согласования интерфейсов внутреннего и внешнего архитектурных слоёв.
+При этом наиболее типовым случаем является согласование интерфейсов фреймворков и внешних сервисов с интерфейсами
 *бизнес-логики*.
 В коде предлагаемого стартера используются *адаптеры* двух видов:  *презентеры* и *шлюзы*(*presenters* и *gateways*).
 
-- *Presenter* - по сути - адаптер пользовательского интерфейса для модулей бизнес-логики.
+- *Presenters* - по сути адаптеры UI-фреймворков для модулей бизнес-логики.
 
-- *Gateway* - адаптер некоторого сервиса, используемого бизнес-логикой, в наиболее типовых случаях доступного через REST
-API. В частности, сервис может выполнять функции хранения состояния сущностей (persistence), иногда в таких случаях
-вместо *Gateway* используется термин *Repository*.
+- *Gateways* - адаптеры внешних сервисов, используемых бизнес-логикой.
+В сегодняшних системах доступ к внешним сервисам чаще всего обеспечивается через REST API. Наиболее распространённым
+видом таких сервисов является сервис доступа к базе данных. Иногда в таких случаях вместо *Gateway* используется термин
+*Repository*.
 
 ...
 </Notes>
 
 ---
-...
 
 - *Domain*
   - *Entities*
   - *Use Cases*
-- Adapters 
-  - gateways (repositories)
-  - presenters
-- UI & backend frameworks
-- DB drivers
+- *Adapters* 
+  - *Presenters*
+  - *Gateways*
+- ***UI & backend frameworks***
+- ***DB drivers***
 
-...
 <Notes>
 ...
 
@@ -368,7 +367,7 @@ and modules
 
 <Image src={modulesCosmicStation} style={{ width: '100vw', height: '70vh'}}/>
 
-<Image src={legoModules} style={{ width: '30vw', height: '70vh'}}/>
+<Image src={legoModules} style={{ width: '50vw', height: '70vh'}}/>
 
 </Step>
 
