feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -57,34 +57,37 @@ import template from "./diagrams/template.svg";
 
 ---
 
-<p style="font-size: 70px; text-align:left; padding-bottom:100px;">
- <span style="font-size: 120px;">How to perceive this presentation</span>
- <br/>
- <br/>
- <ul>
-    <li><i>Speaker notes</i> mode:</li>
-    <ul>
-        <li><i>Alt+P</i> - on Windows</li>
-        <li><i>Option+P</i> - on Mac</li>
-    </ul>
-    <li>Size tuning:</li>
-    <ul>
-        <li><i>F11</i> - fullscreen mode enabling</li>
-        <li><i>Ctrl + '-/+'</i> - decrease/increase font size</li>
-    </ul>
-</ul>
-</p>
+# Как смотреть эту презентацию
 
 <Notes>
 
 Как смотреть эту презентацию
 
-Эту презентацию можно будет повторно пересмотреть-перечитать в режиме докладчика, при котором одновременно виден слайд и
-сопровождающий его текст.
+</Notes>
 
-Режим докладчика включается комбинацией клавиш *Alt+P* - на Windows и *Option+P* - на Mac.
+---
 
-Комбинацией клавиш *Ctrl + -/+* можно уменьшать/увеличивать размер шрифта
+<p style="font-size: 80px; text-align:center;">
+Всем, кто смотрит из браузера нужно включить режим <i>Заметки докладчика</i>:
+</p>
+<p style="font-size: 80px; padding-bottom:140px;">
+    <ul>
+        <li><i>Alt+P</i> - на Windows</li>
+        <li><i>Option+P</i> - на Mac</li>
+    </ul>
+</p>
+
+
+<Notes>
+
+Теперь вы видите сопровождающий текст.
+
+При необходимости используйте клавиши:
+- *F11* - включение/выключение полноэкранного режима
+- Для настройки размера шрифта:
+  - *Ctrl & '-/+'* - на Windows
+  - *Command & '-/+'* - на Mac
+- Для навигации используйте стрелки
 
 </Notes>
 
