feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -52,7 +52,7 @@ import counterResetModuleImplementation from "./diagrams/counterResetModuleImple
 import template from "./diagrams/template.svg";
 
 <Head>
-  <title>Starter for Clean Architecture</title>
+  <title>Стартер для Чистой Архитектуры</title>
 </Head>
 
 ---
@@ -93,28 +93,16 @@ import template from "./diagrams/template.svg";
 
 ---
 
-<p style="font-size: 150px; text-align:center; padding-bottom:140px;">
-Starter for
+<p style="font-size: 180px; text-align:center; padding-bottom:140px;">
+Стартер для
 <br/>
-Client Applications
+Чистой Архитектуры
 </p>
 
 <Notes>
 
-В этой презентации будет рассказано о стартере для клиентских приложений, разрабатываемых
-...
-</Notes>
-
----
-
-<p style="font-size: 150px; text-align:center; padding-bottom:80px;">
-On the Clean Architecture
-</p>
-
-<Notes>
-...
-
-на принципах *Чистой Архитектуры*.
+В этой презентации будет рассказано о стартере для клиентских приложений, разрабатываемых на принципах *Чистой
+Архитектуры*.
 
 Несмотря на то, что предметная область и, соответственно, бизнес-логика стартера предельно минималистичны - это
 простейший счётчик с функциями инкремента и сброса, рассмотрение всех нужных аспектов трудно уместить в одной
@@ -126,17 +114,29 @@ On the Clean Architecture
 имеет многочисленных сторонников, и который последнее время начинает завоёвывать позиции уже и на backend (см., например,
 [*NestJS*](https://nestjs.com/)). 
 
+</Notes>
+
+---
+
+<p style="font-size: 100px; text-align:center; padding-bottom:80px;">
+Целевая аудитория
+</p>
+
+<Notes>
+
 От аудитории желательно присутствие хотя бы минимального предварительного понимания существа проблем, решаемых *Чистой
-Архитектурой*. Ну а для тех, кому эта тема совсем незнакома, сформулируем кратко: принципы *Чистой Архитектуры*
-направлены на обеспечение долгого и устойчивого развития программного продукта - его, если так можно выразиться,
-"масштабируемость во времени".  
+Архитектурой*.
+
+Ну а для тех, кому эта тема совсем незнакома, сформулируем кратко: принципы *Чистой Архитектуры* направлены на
+обеспечение долгого и устойчивого развития программного продукта, его, если выражаться высоким слогом, "масштабируемости
+во времени".  
 
 </Notes>
 
 ---
 
 <p style="font-size: 100px; text-align:center; padding-bottom:140px;">
-Key Features
+Ключевые свойства стартера
 </p>
 
 <Notes>
@@ -148,46 +148,46 @@ Key Features
 
 ---
 
-- *Clean Architecture*
+- *Чистая Архитектура*
 
 <Notes>
 ...
 
-*Чистая Архитектура*
+TBD ...
 
 ...
 </Notes>
 
 ---
 
-- *Clean Architecture*
+- *Чистая Архитектура*
 - *React*
 
 <Notes>
 ...
 
-*React*
+TBD ...
 
 ...
 </Notes>
 
 ---
 
-- *Clean Architecture*
+- *Чистая Архитектура*
 - *React*
 - *TypeScript*
 
 <Notes>
 ...
 
-*TypeScript*
+TBD ...
 
 ...
 </Notes>
 
 ---
 
-- *Clean Architecture*
+- *Чистая Архитектура*
 - *React*
 - *TypeScript*
 - *React Testing Library*
@@ -203,7 +203,7 @@ Key Features
 
 ---
 
-- *Clean Architecture*
+- *Чистая Архитектура*
 - *React*
 - *TypeScript*
 - *React Testing Library*
@@ -214,13 +214,13 @@ Key Features
 
 *Взаимодействие с сервисами по REST API*
 
-Последние два пункта заслуживают отдельного рассмотрения, поэтому здесь подробно освещаться не будут. 
+Последние два пункта заслуживают отдельного подрбного рассмотрения, поэтому здесь освещаться не будут. 
 
 </Notes>
 
 ---
 
-- *Clean Architecture*
+- *Чистая Архитектура*
   - <i style="color:#33FF33">Single Responsibility Principle (SRP)</i>
   - <i style="color:#33FF33">Open-Closed Principle (OCP)</i>
   - <i style="color:#FF0000">Liskov Substitution Principle (LSP)</i>
@@ -247,9 +247,9 @@ Substitution Principle*, для применения которого необх
 ---
 
 <p style="font-size: 130px; text-align:center; padding-bottom:140px;">
-Clean Architecture
+Frontend и 
 <br/> 
-on frontend
+Чистая Архитектура
 </p>
 
 <Notes>
@@ -267,8 +267,8 @@ on frontend
 В этой презентации и в коде самого стартера используются именования, вполне традиционные для *Чистой Архитектуры*, но
 для тех, кто только начинает знакомиться с этой областью, они будут непривычны и нуждаются в пояснениях.
 
-Поэтому перед тем, как перейти к изложению главного предмета презентации, не погружаясь глубоко в детали, приведём
-краткий словарь используемых терминов с соответствующими комментариями.
+Поэтому перед тем, как перейти к изложению главного предмета, не погружаясь глубоко в детали, приведём краткий словарь
+используемых терминов с соответствующими комментариями.
 
 </Notes>
 
@@ -279,7 +279,8 @@ on frontend
 <Notes>
 
 *Domain* - Модель предметной области. Является самой стабильной, сущностной составляющей любого программного продукта. 
-В контексте Чистой Архитектуры *Domain* означает то же самое, что *бизнес логика*. Как правило, подразделяется на два
+
+В понятиях *Чистой Архитектуры* *Domain* означает то же самое, что *бизнес логика*. Как правило, подразделяется на два
 слоя: внутренний - *Entities* и внешний - *Use Cases*.
 
 ...
