feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -260,7 +260,7 @@ Frontend и
 
 ---
 
-# Glossary
+# Словарь используемых терминов
 
 <Notes>
 
@@ -358,9 +358,9 @@ Frontend и
 ---
 
 <p style="font-size: 130px; text-align:center; padding-bottom:140px;">
-Dependency Rule
+Правило Зависимостей
 <br/>
-and modules
+и модули
 </p>
 
 ---
@@ -570,7 +570,7 @@ and modules
 
 ---
 
-# THANK YOU!
+# СПАСИБО ЗА ВНИМАНИЕ!
 
 ---
 
@@ -578,16 +578,16 @@ and modules
 
 ---
 
-# Sources
+# Исходники этой презентации
 
 [https://github.com/softspiders/ca-react-rest-api-starter](https://github.com/softspiders/ca-react-rest-api-starter)
 
 ---
 
-# Useful materials
+# Полезные материалы
 
-[*Dependency Inversion Principle* presentation](https://csb-9kg5y-8d0n41fyp.now.sh)
-[*Заблуждения Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/)
+- [Презентация *О Принципе Инверсии Зависимостей*](https://csb-9kg5y-8d0n41fyp.now.sh)
+- [*Заблуждения Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/)
 
 ---
 
