--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -108,10 +108,10 @@ import template from "./diagrams/template.svg";
 простейший счётчик с функциями инкремента и сброса, рассмотрение всех нужных аспектов трудно уместить в одной
 презентации.  
 
-Поэтому будет показано только наиболее существенное, а именно то, как принципы *Чистой Архитектуры* могут быть
-представлены в коде языка, поддерживающего понятие интерфейса. А поскольку здесь рассматривается специфика клиентских
-приложений, то для этой цели лучше всего подойдёт *TypeScript*, язык, который в среде frontend-разработчиков уже сегодня
-имеет многочисленных сторонников, и который последнее время начинает завоёвывать позиции уже и на backend (см., например,
+Поэтому будет показано только наиболее существенное: как принципы *Чистой Архитектуры* могут быть представлены в коде
+языка, поддерживающего понятие интерфейса. А поскольку здесь рассматривается специфика клиентских приложений, то для
+этой цели лучше всего подойдёт *TypeScript*, язык, который в среде frontend-разработчиков уже сегодня имеет
+многочисленных сторонников, и который последнее время начинает завоёвывать позиции уже и на backend (см., например,
 [*NestJS*](https://nestjs.com/)). 
 
 </Notes>
