feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -266,8 +266,12 @@ Frontend и
 В этой презентации и в коде самого стартера используются именования, вполне традиционные для *Чистой Архитектуры*, но
 для тех, кто только начинает знакомиться с этой областью, они будут непривычны и нуждаются в пояснениях.
 
-Поэтому перед тем, как перейти к изложению главного предмета, не погружаясь глубоко в детали, приведём краткий словарь
-используемых терминов с соответствующими комментариями.
+Прекрасный разбор терминов и понятий *Чистой Архитектуры*, разрешения возможных недоразумений сделан в работе
+[*Заблуждения Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
+
+Перед тем, как перейти к дальнейшему изложению, не погружаясь глубоко в детали и воспользовавшись результатами этой
+работы, оставим здесь лишь сухой остаток, необходимый для дальнейшего изложения в виде краткого словаря используемых
+терминов с соответствующими комментариями.
 
 </Notes>
 
@@ -320,13 +324,17 @@ Frontend и
 <Notes>
 ...
 
-- *Adapters* Адаптер - вспомогательный программный модуль, согласующий интерфейсы двух других модулей. В контексте
+- *Adapters* - в оригинальной диаграмме *Чистой Архитектуры* для адаптеров выделен отдельный слой под названием
+*Interface Adapters*.
+
+Адаптер - вспомогательный программный модуль, согласующий интерфейсы двух других модулей. В контексте
 *Чистой Архитектуры* адаптеры обычно служат для согласования интерфейсов внутреннего и внешнего архитектурных слоёв.
 При этом наиболее типовым случаем является согласование интерфейсов фреймворков и внешних сервисов с интерфейсами
 *бизнес-логики*.
-В коде предлагаемого стартера используются *адаптеры* двух видов:  *презентеры* и *шлюзы*(*presenters* и *gateways*).
+В коде предлагаемого стартера используются *адаптеры* двух видов:  *презентеры*(*presenters*) и *шлюзы*(*gateways*).
+*Презентеры* и *шлюзы*
 
-- *Presenters* - по сути адаптеры UI-фреймворков для модулей бизнес-логики.
+- *Presenters* - по сути являются адаптерами UI-фреймворков для модулей бизнес-логики.
 
 - *Gateways* - адаптеры внешних сервисов, используемых бизнес-логикой.
 В сегодняшних системах доступ к внешним сервисам чаще всего обеспечивается через REST API. Наиболее распространённым
@@ -344,11 +352,15 @@ Frontend и
 - *Adapters* 
   - *Presenters*
   - *Gateways*
-- ***UI & backend frameworks***
-- ***DB drivers***
+- ***Infrastructure***
+  - ***UI***
+  - ***DB***
 
 <Notes>
 ...
+
+- *Infrastructure* - инфраструктура - всё, что находится во внешнем слое. К типичным представителям инфраструктуры
+относятся фреймворки пользовательских интерфейсов (*UI*) и базы данных (*DB*).
 
 ...
 </Notes>
