feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -353,14 +353,14 @@ Frontend и
   - *Presenters*
   - *Gateways*
 - ***Infrastructure***
-  - ***UI***
   - ***DB***
+  - ***UI***
 
 <Notes>
 ...
 
-- *Infrastructure* - инфраструктура - всё, что находится во внешнем слое. К типичным представителям инфраструктуры
-относятся фреймворки пользовательских интерфейсов (*UI*) и базы данных (*DB*).
+- *Infrastructure* - инфраструктура - всё, что находится во внешнем слое. К её типичным представителям относятся базы
+данных (*DB*) и пользовательские интерфейсы (*UI*) со своими фреймворками.
 
 ...
 </Notes>
@@ -369,7 +369,7 @@ Frontend и
 ---
 
 <p style="font-size: 130px; text-align:center; padding-bottom:140px;">
-Правило Зависимостей
+<i>Правило Зависимостей</i>
 <br/>
 и модули
 </p>
