feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -104,14 +104,12 @@ import template from "./diagrams/template.svg";
 Это первая из серии презентаций о стартере для клиентских приложений, разрабатываемых на принципах *Чистой Архитектуры*.
 
 Несмотря на то, что предметная область и, соответственно, бизнес-логика стартера предельно минималистичны - это
-простейший счётчик с функциями инкремента и сброса, рассмотрение всех нужных его сторон трудно уместить в одной
+простейший счётчик с функциями инкремента и сброса, рассмотрение всех значимых аспектов трудно уместить в одной
 презентации.  
 
-В этой презентации будет показано самое существенное: как принципы *Чистой Архитектуры* могут быть представлены в коде
-языка, поддерживающего понятие интерфейса. А поскольку здесь рассматривается специфика клиентских приложений, то для
-этой цели лучше всего подойдёт *TypeScript*, язык, который в среде frontend-разработчиков уже сегодня имеет
-многочисленных сторонников, и который последнее время начинает завоёвывать позиции уже и на backend (см., например,
-[*NestJS*](https://nestjs.com/)). 
+В этой презентации будет показано лишь самое существенное: как принципы *Чистой Архитектуры* могут быть представлены в
+коде  *TypeScript* - языка, который в среде frontend-разработчиков сегодня имеет многочисленных сторонников, и который
+последнее время начинает завоёвывать позиции уже и на backend. 
 
 </Notes>
 
