feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -107,9 +107,9 @@ import template from "./diagrams/template.svg";
 простейший счётчик с функциями инкремента и сброса, рассмотрение всех значимых аспектов трудно уместить в одной
 презентации.  
 
-В этой презентации будет показано лишь самое существенное: как принципы *Чистой Архитектуры* могут быть представлены в
-коде  *TypeScript* - языка, который в среде frontend-разработчиков сегодня имеет многочисленных сторонников, и который
-последнее время начинает завоёвывать позиции уже и на backend. 
+Поэтому здесь будет показано лишь самое существенное: как принципы *Чистой Архитектуры* могут быть представлены в коде,
+в данном случае, в коде *TypeScript* - языка, который в среде frontend-разработчиков сегодня имеет многочисленных
+сторонников, и который последнее время начинает завоёвывать позиции уже и на backend. 
 
 </Notes>
 
@@ -125,8 +125,7 @@ import template from "./diagrams/template.svg";
 Архитектурой*.
 
 Ну а для тех, кому эта тема совсем незнакома, сформулируем кратко: принципы *Чистой Архитектуры* направлены на
-обеспечение долгого и устойчивого развития программного продукта, его, если выражаться высоким слогом, "масштабируемости
-во времени".  
+обеспечение долгого и устойчивого развития программного продукта, его, так сказать, "масштабируемости во времени".  
 
 </Notes>
 
