feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -139,7 +139,6 @@ import template from "./diagrams/template.svg";
 
 Ключевые свойства стартера:
 
-...
 </Notes>
 
 ---
@@ -147,11 +146,12 @@ import template from "./diagrams/template.svg";
 - *Чистая Архитектура*
 
 <Notes>
-...
 
-TBD ...
+*Чистая Архитектура* - главное, для чего создавался стартер.
 
-...
+В общих чертах стартер отражает актуальный взгляд автора (не исключено, что он может измениться) на то, каким должно
+быть frontend-приложение, разрабатываемое на принципах *Чистой Архитектуры*, в частности, на *TypeScript*.
+
 </Notes>
 
 ---
