feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -125,7 +125,7 @@ import template from "./diagrams/template.svg";
 Архитектурой*.
 
 Ну а для тех, кому эта тема совсем незнакома, сформулируем кратко: принципы *Чистой Архитектуры* направлены на
-обеспечение долгого и устойчивого развития программного продукта, его, так сказать, "масштабируемости во времени".  
+обеспечение долгого и устойчивого развития программного продукта, своего рода "масштабируемости во времени".  
 
 </Notes>
 
@@ -160,11 +160,10 @@ import template from "./diagrams/template.svg";
 - *React*
 
 <Notes>
-...
 
-TBD ...
+В качестве UI-фреймворка используется *React*. На это несколько причин, не самая последняя из которых - популярность
+*React* среди разработчиков.
 
-...
 </Notes>
 
 ---
