feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -108,8 +108,7 @@ import template from "./diagrams/template.svg";
 презентации.  
 
 Поэтому здесь будет показано лишь самое существенное: как принципы *Чистой Архитектуры* могут быть представлены в коде,
-в данном случае, в коде *TypeScript* - языка, который в среде frontend-разработчиков сегодня имеет многочисленных
-сторонников, и который последнее время начинает завоёвывать позиции уже и на backend. 
+в данном случае, в коде *TypeScript*.
 
 </Notes>
 
@@ -161,8 +160,9 @@ import template from "./diagrams/template.svg";
 
 <Notes>
 
-В качестве UI-фреймворка используется *React*. На это несколько причин, не самая последняя из которых - популярность
-*React* среди разработчиков.
+В качестве UI-фреймворка используется *React*.
+
+На это несколько причин, не самая последняя из которых - популярность *React* среди разработчиков.
 
 </Notes>
 
@@ -173,11 +173,12 @@ import template from "./diagrams/template.svg";
 - *TypeScript*
 
 <Notes>
-...
 
-TBD ...
+Стартер написан на *TypeScript*, на выбор которого повлияли примерно те же причины, что и на выбор *React*.
 
-...
+В среде frontend-разработчиков *TypeScript* уже давно имеет многочисленных сторонников, а последнее время начинает
+завоёвывать позиции уже и на backend.
+
 </Notes>
 
 ---
@@ -188,12 +189,11 @@ TBD ...
 - *React Testing Library*
 
 <Notes>
-...
 
-Для модульного тестирования используется библиотека Кента Доддса *React Testing Library*. Последнее время она получила
-уже вполне широкое признание среди разработчиков.
+Для модульного тестирования в стартере используется библиотека [Кента Доддса](https://kentcdodds.com/) [*React Testing
+Library*](https://testing-library.com/docs/react-testing-library/intro), которая за последнее время получила уже вполне
+широкое признание.
 
-...
 </Notes>
 
 ---
