feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -258,15 +258,16 @@ Frontend и
 
 <Notes>
 
-В этой презентации и в коде самого стартера используются именования, вполне традиционные для *Чистой Архитектуры*, но
-для тех, кто только начинает знакомиться с этой областью, они будут непривычны и нуждаются в пояснениях.
+Притом что и в этой презентации, и в коде самого стартера используются термины, вполне традиционные для *Чистой
+Архитектуры*, эти термины будут непривычны для тех, кто только начинает знакомиться с этой областью, поэтому они
+нуждаются в отдельных пояснениях.
 
 Прекрасный разбор терминов и понятий *Чистой Архитектуры*, разрешающий ряд недоразумений, сделан в работе [*Заблуждения
 Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 
 Перед тем, как перейти к дальнейшему изложению, не погружаясь глубоко в детали и воспользовавшись результатами этой
-работы, оставим здесь лишь сухой остаток, необходимый для дальнейшего изложения в виде краткого словаря используемых
-терминов с соответствующими комментариями.
+работы, оставим здесь только то, что необходимо для дальнейшего изложения в виде краткого словаря используемых терминов,
+каждый из которых сопровождается соответствующими пояснениями.
 
 </Notes>
 
