feat: deck update

--- a/deck/ru/deck.mdx
+++ b/deck/ru/deck.mdx
@@ -267,7 +267,7 @@ Clean Architecture*](https://habr.com/ru/company/mobileup/blog/335382/).
 
 Перед тем, как перейти к дальнейшему изложению, не погружаясь глубоко в детали и воспользовавшись результатами этой
 работы, оставим здесь только то, что необходимо для дальнейшего изложения в виде краткого словаря используемых терминов,
-каждый из которых сопровождается соответствующими пояснениями.
+каждый из которых будет снабжён соответствующими пояснениями.
 
 </Notes>
 
